--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@
                 <h3>Customer Support Associate | Tech Mahindra</h3>
                 <span class="meta">Duration: May 2024 - Dec 2024</span>
                 <ul>
-                    <li>Experience & Impact: Managed multi-channel customer interactions to deliver precise issue resolutions, consistently maintaining high CSAT (Customer Satisfaction) scores through quality service.</li>
-                    <li>Learning & Analysis: Developed the ability to perform trend analysis by identifying recurring customer pain points, contributing directly to organizational process improvements.</li>
-                    <li>Skills Acquired: Mastered CRM systems for meticulous documentation and data integrity, while sharpening technical troubleshooting and professional communication skills.</li>
-                    <li>Management & Coordination: Streamlined internal workflows by coordinating effectively with team leads and cross-functional departments to enhance overall service delivery and operational efficiency.</li>                
+                    <li><b>Experience & Impact:</b> Managed multi-channel customer interactions to deliver precise issue resolutions, consistently maintaining high CSAT (Customer Satisfaction) scores through quality service.</li>
+                    <li><b>Learning & Analysis:</b> Developed the ability to perform trend analysis by identifying recurring customer pain points, contributing directly to organizational process improvements.</li>
+                    <li><b>Skills Acquired:</b> Mastered CRM systems for meticulous documentation and data integrity, while sharpening technical troubleshooting and professional communication skills.</li>
+                    <li><b>Management & Coordination:</b> Streamlined internal workflows by coordinating effectively with team leads and cross-functional departments to enhance overall service delivery and operational efficiency.</li>                
                 </ul>
             </div>
 
@@ -285,8 +285,10 @@
                 <h3>Data Analyst Intern | Meri Skill</h3>
                 <span class="meta">Duration: 45 days</span>
                 <ul>
-                    <li>Visualization Excellence: Developed two high-impact Power BI dashboards during an intensive 45-day internship to transform complex datasets into actionable business insights.</li>
-                    <li>Data Integrity: Applied advanced data cleaning and preprocessing techniques to ensure the accuracy, reliability, and quality of all analytical outputs.</li>
+                    <li><b>Visualization Excellence:</b> Developed two high-impact Power BI dashboards during an intensive 45-day internship to transform complex datasets into actionable business insights.</li>
+                    <li><b>Data Integrity:</b> Applied advanced data cleaning and preprocessing techniques to ensure the accuracy, reliability, and quality of all analytical outputs.</li>
+                    <li><b>Dynamic Analysis:</b>Gained hands-on experience managing real-time data streams, enhancing the ability to derive insights from rapidly changing information flows.</li>
+                    <li><b>Professional Collaboration: </b>Contributed to cross-functional team projects, demonstrating strong communication skills and the ability to thrive in a fast-paced professional environment.</li>
                     
                 </ul>
             </div>
@@ -295,11 +297,10 @@
                 <h3>Social Media Marketing Intern | NEO</h3>
                 <span class="meta">Duration: 1 month</span>
                 <ul>
-                    <li>Analysed engagement metrics across social platforms, developing data-driven recommendations that increased user interaction by 15% and grew follower counts by 10% within one month.</li>
-                    <li>Developed data-driven recommendations that boosted user interaction by 15% and increased follower count by 10% within one month</li>
-                    <li>Collaborated with cross-functional teams to align marketing strategy with data insights</li>
-                    <li>Dynamic Analysis: Gained hands-on experience managing real-time data streams, enhancing the ability to derive insights from rapidly changing information flows</li>
-                    <li>Professional Collaboration: Contributed to cross-functional team projects, demonstrating strong communication skills and the ability to thrive in a fast-paced professional environment.</li>
+                	<li><b>Quantitative Impact: </b>Analyzed social media engagement metrics to deliver recommendations that achieved a 15% increase in user interaction and 10% follower growth in one month.</li>
+                	<li><b>Strategic Aligment: </b>Collaborated with cross-functional teams to integrate data-driven insights into core marketing strategies and project objectives.</li>
+                	<li><b>Operational Ability: </b>Managed real-time data streams to provide dynamic analysis, ensuring business insights remained relevant in fast-paced environments.</li>
+                	<li><b>Professional Synergy: </b>Contributed to high-level team collaborations, utilizing strong communication skills to drive successful project outcomes within professional settings.</li>
                 </ul>
             </div>
         </section>
@@ -402,6 +403,10 @@
                     <h3>📈 IBM Skillsbuild</h3>
                     <p style="color: var(--text-muted); font-size: 0.9rem;">Introduction to LLM</p>
                 </div>
+                 <div class="glass-card" style="padding: 25px; text-align: center;">
+                    <h3>Gen AI</h3>
+                    <p style="color: var(--text-muted); font-size: 0.9rem;">Introduction to Gen AI 2 days workshop</p>
+                </div>
             </div>
         </section>
 
@@ -411,21 +416,24 @@
                 <div class="glass-card">
                     <h3>Technical Skills</h3>
                     <div class="pill-container">
+                        <div class="pill">🤖 Gen AI tools</div>
                         <div class="pill">📊 Data Visualization (Power BI, Matplotlib, Seaborn)</div>
                         <div class="pill">💾 Data Analysis (Python: Pandas, Scikit-learn, SQL)</div>
                         <div class="pill">📈 Advanced Excel (Pivot Tables, Formulas)</div>
                         <div class="pill">💼 MS Office Suite</div>
-                        <div class="pill">🤖 Gen AI tools</div>
+                        
                     </div>
                 </div>
                 <div class="glass-card">
                     <h3>Core Competencies</h3>
                     <div class="pill-container">
+                        <div class="pill">📕 Strive to learn new things</div>
                         <div class="pill">🤝 Stakeholder Communication</div>
                         <div class="pill">📊 Quantitative Analysis</div>
                         <div class="pill">📋 Decision Support & Reporting</div>
-                        <div class="pill">🎯 Project Management</div>
                         <div class="pill">💡 Problem Solving</div>
+                        <div class="pill">🎯 See tasks or projects through completion</div>
+
                     </div>
                 </div>
             </div>
@@ -540,6 +548,5 @@
     </script>
 </body>
 </html>
-
 
 
